@@ -1,0 +1,22 @@
+<?php
+/**
+ * PostgreSQL configuration
+ * 
+ * $Id$
+ *
+ * @author Xavier Perseguers <typo3@perseguers.ch>
+ *
+ * @package TYPO3
+ * @subpackage dbal
+ */
+global $TYPO3_CONF_VARS;
+
+$TYPO3_CONF_VARS['EXTCONF']['dbal']['handlerCfg'] = array(
+	'_DEFAULT' => array( 
+		'type' => 'adodb', 
+		'config' => array(
+			'driver' => 'postgres',
+		),
+	), 
+);
+?>
