@@ -1,3 +1,7 @@
+2010-02-21  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #2367: No support for LIMIT [PostgreSQL]
+
 2010-02-14  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Set version to 1.1.1
